<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id ="@+id/quiz_layout"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id = "@+id/question_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:text="@string/question_text"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin = "5dp"
        android:text="@string/True" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin = "5dp"
        android:text="@string/False"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev"
            android:layout_margin = "5dp"
            app:icon="@drawable/arrow_left"
            app:iconGravity = "start"/>

        <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:layout_margin = "5dp"
        app:icon="@drawable/arrow_right"
        app:iconGravity = "end"
            />
    </LinearLayout>

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_tokens_left"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginTop="12dp"/>
    <TextView
        android:id="@+id/token_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="3"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginTop="12dp"/>



</LinearLayout>